# json-holygrail

./: .coverage  MANIFEST.in  PRD.md  README.md  Run Notes  install.sh  main.py  plan.md  pyproject.toml  setup.py  test-fcel.json  test-fcel.md  test_main.py  version.json  version_manager.py
examples/: config-example.toml  custom-template-example.md  trade-plan-FCEL-2025-12-18.json  trade-plan-FCEL-2025-12-18.json:Zone.Identifier
json_holygrail/: __init__.py  config.py  filters.py  main.py  renderer.py  version_manager.py
json_holygrail/formats/: __init__.py  compact.md  default.md
