[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-holygrail"
version = "0.1.0"
description = "Trading Plan JSON to Markdown Converter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
json-holygrail = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
py-modules = ["main", "version_manager"]
