[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-holygrail"
version = "0.2.0"
description = "Trading Plan JSON to Markdown Converter with Jinja2 Templates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
json-holygrail = "json_holygrail.main:main"

[tool.setuptools]
packages = ["json_holygrail"]

[tool.setuptools.package-data]
json_holygrail = ["formats/*.md", "version.json"]
